--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ import Section from '@components/Section.astro';
         Инфорация за всички училища по-долу!
     </div>
     <div class="mt-8 flex flex-wrap items-center justify-center gap-4">
-        <a href="/learn-more" class="bg-orange-400 hover:bg-orange-500 text-white px-4 py-2 rounded">Learn more</a>
-        <a href="/request-demo" class="bg-blue-400 hover:bg-blue-500 text-white px-4 py-2 rounded">Request demo</a>
+        <a href="/learn-more" class="bg-orange-400 hover:bg-orange-500 text-white px-4 py-2 rounded">Карта на всички училища в Добрич</a>
+        <a href="/request-demo" class="bg-blue-400 hover:bg-blue-500 text-white px-4 py-2 rounded">Информация за всяко училище</a>
     </div>
 </Section>
