--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,7 +5,7 @@ import Section from '@components/Section.astro';
 
 <Section class="text-center">
     <h1 class="text-4xl font-black sm:text-6xl text-balance">
-        Schools in Dobrich
+        Училища в Добрич!
     </h1>
     <div class="mx-auto mt-6 max-w-prose">
         Всички училища в добрич!
