--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,13 +1,9 @@
 ---
-import { type Header } from 'types';
+// Removed `title` from props since we're hardcoding it now
 import Action from '@components/Action.astro';
 import ResponsiveImage from '@components/ResponsiveImage.astro';
 
-interface Props extends Header {
-    'data-sb-field-path'?: string;
-}
-
-const { title, logo, navLinks, 'data-sb-field-path': fieldPath } = Astro.props;
+const { logo, navLinks, 'data-sb-field-path': fieldPath } = Astro.props;
 ---
 
 <nav class="p-4 sm:p-5" data-sb-field-path={fieldPath}>
@@ -19,7 +15,7 @@ const { title, logo, navLinks, 'data-sb-field-path': fieldPath } = Astro.props;
                 </a>
             ) : (
                 <a class="text-xl font-bold sm:text-2xl" href="/" data-sb-field-path=".title">
-                    {title}
+                    Училища в Добрич
                 </a>
             )
         }
