--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -47,3 +47,28 @@ const componentMap = {
         </Layout>
     )
 }
+{
+  page && (
+    <Layout title={metaTitle ?? title} description={metaDescription} image={socialImage}>
+      <div data-sb-object-id={_id}>
+        {sections?.length &&
+          sections.map((section, idx) => {
+            const Component = componentMap[section._type];
+            return <Component {...section} data-sb-field-path={`sections.${idx}`} />;
+          })}
+          
+        {/* Google Map iframe embedded here */}
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d27342.40805921334!2d27.825164903713983!3d43.57578155700212!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sbg!2sbg!4v1748842263916!5m2!1sbg!2sbg"
+          width="600"
+          height="450"
+          style={{ border: 0 }}
+          allowFullScreen
+          loading="lazy"
+          referrerPolicy="no-referrer-when-downgrade"
+        />
+      </div>
+    </Layout>
+  )
+}
+
